@@ -1,3 +1,4 @@
+* Allow to import backend from entry points
 * Add reversed operators to PYSON expressions
 * Use CURRENT_TIMESTAMP instead of now
 * Use Constraint instance in ModelSQL._sql_constraints
